# cdm-spark-events

./: Dockerfile  README.md  RELEASE_NOTES.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: test.yml
cdmsparkevents/: config.py  eventloop.py  generate_importer_mappings.py  main.py  spark.py
cdmsparkevents/selftest/: integration.py  startup.py
design/: design.md  post_import_notification.md
docker_compose/create_auth_user/: Dockerfile  create_auth_token.sh
docker_compose/cts_helpers/: add_cts_job_to_mongo.py
docker_compose/s3_policies/: minio_create_bucket_entrypoint.sh  test-events-read-write-policy.json
test/: arg_checkers_test.py  config_test.py  eventloop_test.py  generate_importer_mappings_test.py  main_test.py  spark_test.py
test/manual/: README.md  TestingNotes.md  dump_kafka_dlq.py  send_kafka_message.py
test/manual/data/: checkm2_db_init.tsv
test/manual/data/run1/: quality_report.tsv
test/manual/data/run2/: quality_report.tsv
test/selftest/: integration_test.py  startup_test.py
