[project]
name = "cdm-spark-events"
version = "0.1.0"
description = "Event processor for the KBase CDM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kafka-python==2.2.2",
    "pydantic-settings==2.9.1",
    "pyspark==3.5.5",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
]
