[project]
name = "cdm-spark-events"
version = "0.1.0"
description = "Event processor for the KBase CDM"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "delta-spark==4.0.1",
    "kafka-python==2.2.11",
    "pandas==2.3.0",
    "pydantic-settings==2.9.1",
    "pyspark==4.1.1",
    "python-json-logger==3.3.0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
]

[dependency-groups]
dev = [
    "ipython==9.3.0",
    "pytest==8.4.0",
    "pytest-cov==6.1.1",
]
